# monk

./: .travis.yml  AGENTS.md  CHANGELOG.md  README.md  clam.cabal  clam.code-workspace  monk.cabal  test.sh
.github/workflows/: ci.yml
app/: Main.hs
benchmark/: Main.hs
benchmark/fixtures/: large.bash  medium.bash  small.bash
docs/: babelfish-comparison.md
docs/design/: polysemy_conversion.md  polysemy_testing_strategy.md  translator-todo.md
scripts/: bakeoff-compatible.txt  bakeoff.sh
src/: BashParser.hs  Clam.hs  ClamPrettyPrinter.hs  FishAST.hs  Monk.hs  ShellToFish.hs
src/Language/Bash/: Parser.hs
src/Language/Fish/: AST.hs  Inline.hs  Pretty.hs  Translator.hs  translator-review.md  translator-todo.md
src/Language/Fish/AST/: Example.hs  Types.hs
src/Language/Fish/Pretty/: Command.hs  Expr.hs  Job.hs  Pattern.hs  Redirect.hs  Statement.hs
src/Language/Fish/Translator/: Args.hs  Builtins.hs  Commands.hs  Cond.hs  Control.hs  ForArithmetic.hs  Hoist.hs  IO.hs  Monad.hs  Names.hs  Pipefail.hs  Pipeline.hs  Redirections.hs  Statement.hs  Token.hs  Variables.hs
src/Language/Fish/Translator/Builtins/: Common.hs  Declare.hs  Scope.hs  Shift.hs  Trap.hs  Unset.hs
src/Language/Fish/Translator/Commands/: Args.hs  CommandTokens.hs  Echo.hs  Read.hs  SetOptions.hs  SimpleCommand.hs  Status.hs  Tests.hs  Time.hs
src/Language/Fish/Translator/Commands/CommandTokens/: Builtins.hs  Core.hs  Dispatch.hs  Status.hs
src/Language/Fish/Translator/Hoist/: Monad.hs
src/Language/Fish/Translator/Variables/: Arithmetic.hs  Assignments.hs  Common.hs  Expressions.hs  Glob.hs  Index.hs  ParamExpansion.hs  ParamParse.hs  ProcessSubst.hs  Substitution.hs
src/Language/Fish/Translator/Variables/Arithmetic/: Assignments.hs  Core.hs  Expr.hs  Helpers.hs  ShortCircuit.hs
src/Language/Fish/Translator/Variables/Expressions/: Arrays.hs  Core.hs  Lists.hs  Split.hs  Subst.hs  Words.hs
test/: FixtureSupport.hs  Gen.hs  Golden.hs  Integration.hs  RealWorld.hs  ShellSupport.hs  Spec.hs  TestSupport.hs
test/Property/: OutputEquivalence.hs  Pretty.hs  Translation.hs
test/Unit/: Inline.hs  Pipefail.hs  Polysemy.hs  Pretty.hs  Translation.hs
test/fixtures/golden/: assignments.bash  assignments.fish  case-pattern-expansion-glob.bash  case-pattern-expansion-glob.fish  double-bracket-eq.bash  double-bracket-eq.fish  echo-echo.bash  echo-echo.fish  echo-exit.bash  echo-exit.fish  extglob-basic.bash  extglob-basic.fish  glob-basic.bash  pipeline.bash  pipeline.fish  read-prompt.bash  read-prompt.fish
test/fixtures/integration/: arith-short-circuit.bash  errexit-andor.bash  errexit-basic.bash  errexit-conditionals.bash  pipefail-basic.bash  pipefail-toggle.bash  pushd-popd.bash  read-flags.bash  read-flags.stdin  stdout-stderr-exit.bash  time-prefix.bash
test/fixtures/realworld/: README.md  a2l.bash  a2l.fish  coat.bash  coat.fish  coat.stdin  echo-args.bash  echo-args.fish  hello-world.bash  hello-world.fish  pyramid-left.bash  pyramid-left.fish  pyramid-right.bash  pyramid-right.fish  taoc.bash  taoc.fish  version-compare.args  version-compare.bash  version-compare.fish
