cabal-version:       3.0
name:                monk
version:             0.1.0.0
synopsis:            Translate Bash scripts to Fish shell scripts.
description:
    Monk translates shell scripts (Bash, etc.) into fish-shell code.
    See [README.md](https://github.com/eessmann/monk#monk) for more details.
homepage:            https://github.com/eessmann/monk
bug-reports:         https://github.com/eessmann/monk/issues
license:             MIT
license-file:        LICENSE
author:              Erich Essmann
maintainer:          Erich Essmann <essmanne@gmail.com>
copyright:           2025 Erich Essmann
category:            Translate Bash to Fish shell
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 9.12.2

source-repository head
  type:                git
  location:            https://github.com/eessmann/monk.git

common common-options
  build-depends:       base ^>= 4.21
                     , relude
                     , ShellCheck ^>= 0.11
                     , prettyprinter ^>= 1.7
                     , safe-exceptions ^>= 0.1.7

  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)
                     , relude

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  --if impl(ghc >= 8.10)
    --ghc-options:       -Wunused-packages
  if impl(ghc >= 9.0)
    ghc-options:       -Winvalid-haddock
  if impl(ghc >= 9.2)
    ghc-options:       -Wredundant-bang-patterns
                       -Woperator-whitespace
  if impl(ghc >= 9.4  && < 9.10)
    ghc-options:       -Wforall-identifier
  if impl(ghc >= 9.4)
    ghc-options:       -Wredundant-strictness-flags
  if impl(ghc >= 9.8)
    ghc-options:       -Wterm-variable-capture
                       -Winconsistent-flags

  default-language:    GHC2024
  default-extensions:  ApplicativeDo
                       DefaultSignatures
                       FunctionalDependencies
                       MultiWayIf
                       OverloadedStrings
                       PartialTypeSignatures
                       RecordWildCards
                       TypeFamilies
                       ViewPatterns

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Monk
  other-modules:       Language.Fish.AST
                     , Language.Fish.Pretty
                     , Language.Fish.Translator
                     , Language.Bash.Parser

executable monk
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       monk
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite monk-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       monk
                     , tasty ^>= 1.5
                     , tasty-hunit ^>= 0.10
                     , tasty-quickcheck ^>= 0.11
                     , QuickCheck ^>= 2.16

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark monk-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       monk
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
