cabal-version:       3.14
name:                monk
version:             0.2.1
synopsis:            Translate Bash scripts to Fish shell scripts.
description:
    Monk translates shell scripts (Bash, etc.) into fish-shell code.
    See [README.md](https://github.com/eessmann/monk#monk) for more details.
homepage:            https://github.com/eessmann/monk
bug-reports:         https://github.com/eessmann/monk/issues
license:             MIT
license-file:        LICENSE
author:              Erich Essmann
maintainer:          Erich Essmann <essmanne@gmail.com>
copyright:           2025 Erich Essmann
category:            Translate Bash to Fish shell
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == {9.12.2}

source-repository head
  type:                git
  location:            https://github.com/eessmann/monk.git

common common-options
  build-depends:       base >= 4.21 && <5
                     , relude
                     , ShellCheck ^>= 0.11
                     , prettyprinter ^>= 1.7
                     , safe-exceptions ^>= 0.1.7
                     , polysemy ^>= 1.9
                     , polysemy-plugin ^>= 0.4

  -- Use relude as the Prelude via mixins.
  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)
                     , relude

  ghc-options:         -Wall
                       -Werror
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
                       -fhide-source-paths
                       -fplugin=Polysemy.Plugin
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
                       -Winvalid-haddock
                       -Wredundant-bang-patterns
                       -Woperator-whitespace
                       -Wredundant-strictness-flags
                       -Wterm-variable-capture
                       -Winconsistent-flags

  default-language:    GHC2024
  default-extensions:  ApplicativeDo
                       DefaultSignatures
                       FunctionalDependencies
                       MultiWayIf
                       OverloadedStrings
                       PartialTypeSignatures
                       RecordWildCards
                       TypeFamilies
                       ViewPatterns

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Monk
                     , Language.Fish.Inline
  other-modules:       Language.Fish.AST
                     , Language.Fish.Pretty
                     , Language.Fish.Translator
                     , Language.Fish.Translator.Builtins
                     , Language.Fish.Translator.Monad
                     , Language.Fish.Translator.Names
                     , Language.Fish.Translator.Variables
                     , Language.Fish.Translator.Commands
                     , Language.Fish.Translator.Control
                     , Language.Fish.Translator.ForArithmetic
                     , Language.Fish.Translator.IO
                     , Language.Fish.Translator.Redirections
                     , Language.Bash.Parser

executable monk
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       monk
                     , optparse-applicative ^>= 0.19
                     , containers
                     , directory
                     , filepath
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite monk-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Gen
                     , FixtureSupport
                     , TestSupport
                     , ShellSupport
                     , RealWorld
                     , Golden
                     , Integration
                     , Unit.Inline
                     , Unit.Polysemy
                     , Unit.Pretty
                     , Unit.Translation
                     , Property.Pretty
                     , Property.Translation
                     , Property.OutputEquivalence
  build-depends:       monk
                     , containers
                     , directory
                     , filepath
                     , process
                     , tasty ^>= 1.5
                     , tasty-hunit ^>= 0.10
                     , tasty-quickcheck ^>= 0.11
                     , QuickCheck >= 2.14 && < 2.17

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark monk-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       monk
                     , text
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
